# MAPiCO-2.0.0

./: .gitignore  AUTHORS  Makefile  Makefile.am  Makefile.in  README.md  config.status  configure  configure.in
asmapico/: AssemblyMAPiCO.c  AssemblyMAPiCO.xml  AssemblyMAPiCO_Java.xml  Factorial.mapico  Factorial.pico  Fibonacci.mapico  Fibonacci.pico  FileInBytes.mapico  Makefile  Makefile.am  Makefile.in  NQueen.mapico  NQueen.pico  SmMeM.mapico  SmMeM.pico  aclocal.m4  config.status  configure  configure.in
constsys/: Arbin.c  Arbin.h  AritToIndex.c  AritToIndex.h  AskTell.h  CS.c  Cola.c  Cola.h  Dependency.h  Domain.c  Domain.h  FDCompiler.c  FDCompiler.h  FDEmulator.c  FDEmulator.h  FDVariable.c  FDVariable.h  FrameConst.c  FrameConst.h  Indexical.c  Indexical.h  Indexicals.c  Indexicals.h  Lista.c  Lista.h  ListaFC.c  ListaFC.h  Makefile  Makefile.am  Makefile.in  Monotonicity.c  Monotonicity.h  PruneType.h  Range.h  Store.c  Store.h  TypeFrameConst.h  VDStore.c  VDStore.h  ValueFrameConst.c  (+6 more)
doc/: FileInBytes.mapico  (+2 more)
mapico/: BinaryTree.c  Factorial_0.mapico  Factorial_1.mapico  Factorial_2.mapico  Factorial_3.mapico  Factorial_4.mapico  Factorial_5.mapico  Factorial_6.mapico  Factorial_7.mapico  Fibonacci_10.mapico  HeapSort.c  Loader.c  MAPiCO.c  MAPiCOTest.c  Makefile  Makefile.am  Makefile.in  NQueen.mapico  Parameters.c  PlugIns.c  Proceso.c  SMM.mapico  StoreMA.c  config.h  config.status  configure  configure.in  libtool
mapico/.deps/: BinaryTree.Plo  HeapSort.Plo  Loader.Plo  MAPiCO.Po  Parameters.Plo  PlugIns.Plo  Proceso.Plo  StoreMA.Plo
(+67 files in other folders)
